Add MVC design page and GitHub home navigation

--- a/demo/src/main/resources/templates/git.html
+++ b/demo/src/main/resources/templates/git.html
@@ -325,7 +325,9 @@
     <div class="container">
         <div class="nav-bar">
             <a href="/" class="nav-link">🏠 MVC Architecture</a>
+            <a href="/architecture" class="nav-link">🏗️ MVC Design</a>
             <a href="/git" class="nav-link active">📚 Git Workflow</a>
+            <a href="https://github.com/saaysalim" target="_blank" rel="noopener noreferrer" class="nav-link">🌐 GitHub Home</a>
         </div>
         
         <div class="header">
